# django-test-notes-project

./: .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: filelds.py  serializers.py  tests.py  urls.py  views.py
deploy/: Dockerfile  celery_start.sh  docker-compose.prod.yml
deploy/app/: Dockerfile  uwsgi.ini
deploy/nginx/: host.conf
frontend/: package-lock.json  package.json  vite.config.js
frontend/services/: api.js  consts.js  localData.js
frontend/src/: App.vue  main.js
frontend/src/containers/: MainHeader.vue  NotesContainer.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  note.js
frontend/src/views/: HomeView.vue  LoginView.vue  ProfileView.vue
notes/: debug.py  settings.py  urls.py
src/api/: filelds.py  filters.py  serializers.py  tests.py  urls.py  views.py
src/notes/: celery.py  settings.py  urls.py
src/web/: db_utils.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
src/web/admin/: note.py  (+3 more)
web/: admin.py  enums.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
web/admin/: __init__.py  note.py  tag.py
web/migrations/: 0001_initial.py  0002_alter_user_role.py  0002_tag.py  0003_alter_note_alert_send_at_alter_note_tags_and_more.py  0003_note_tags.py  0004_alter_note_options_alter_tag_options_and_more.py  0004_rename_user_id_note_user_rename_user_id_tag_user_and_more.py  0005_note_file.py  0006_note_image_alter_note_file.py  0007_alter_note_image.py  0008_note_is_shared.py
web/templatetags/: notes.py
web/tests/: factories.py  tests.py
(+47 files in other folders)
